changes2 are added

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="bg-[url(https://ik.imagekit.io/fase0ix1b/Revamp%20Projects/Chat%20Bot/tGqyYypz281IbaiOKNG_ru6lvTze1HhAYYXCRpw9CO8.jpg_width=1080&crop=smart&auto=webp&s=15791484762f91c3e386d7bc03026dea52642b27?updatedAt=1753892209669)] opacity-1 ">
                 <div class=" flex flex-col justify-between  p-3 space-y-2 pt-20 pb-10">
                     <div class="text-white  bg-[#47a3f3] p-3 text-right rounded-t-lg rounded-bl"><p>Hello Rahul,how are you?</p></div>
-                    <div class="text-white  bg-[#52606d] p-3 rounded-t-lg rounded-br-lg"><p>Hi Sp, I am good> How about you? </p></div>
-                    <div class="text-white  bg-[#47a3f3] p-3  text-right rounded-t-lg rounded-bl"><p>I'm fine, L published my Website recently</p></div>
+                    <div class="text-white  bg-[#52606d] p-3 rounded-t-lg rounded-br-lg"><p>Hi Sp, I am good .How about you? </p></div>
+                    <div class="text-white  bg-[#47a3f3] p-3  text-right rounded-t-lg rounded-bl"><p>I'm fine, I am published my Website recently</p></div>
                     <div class="text-white  bg-[#52606d] p-3 rounded-t-lg rounded-br-lg"><p>Oh greate SP! Can you sent me the URL?</p></div>
                     <div class="text-white  bg-[#47a3f3] p-3 text-right rounded-t-lg rounded-bl"><p>http://sp.ccbp.tech</p></div>
                     <div class="text-white bg-[#52606d] p-3 rounded-t-lg rounded-br-lg"><p>Awesome SP ,where did you learn?</p></div>
-                    <div class="text-white  bg-[#47a3f3] p-3  text-right rounded-t-lg rounded-bl"><p>In Youtube</p></div>
+                    <div class="text-white  bg-[#47a3f3] p-3  text-right rounded-t-lg rounded-bl"><p> Youtube</p></div>
                 </div>
 
 
